--- a/cart.html
+++ b/cart.html
@@ -184,7 +184,7 @@
 						      		<span>Fugiat voluptates quasi nemo, ipsa perferendis</span>
 						      	</div>
 						      </td>
-						      <td>P30.99</td>
+						      <td>P25.99</td>
 						      <td class="quantity">
 					        	<div class="input-group">
 				             	<input type="text" name="quantity" class="quantity form-control input-number" value="1" min="1" max="100">
@@ -214,7 +214,7 @@
 						      		<span>Fugiat voluptates quasi nemo, ipsa perferendis</span>
 						      	</div>
 						      </td>
-						      <td>P35.50</td>
+						      <td>P22.50</td>
 						      <td class="quantity">
 					        	<div class="input-group">
 				             	<input type="text" name="quantity" class="quantity form-control input-number" value="1" min="1" max="100">
@@ -297,20 +297,20 @@
     					<h3>Cart Totals</h3>
     					<p class="d-flex">
     						<span>Subtotal</span>
-    						<span>$20.60</span>
+    						<span>P25.60</span>
     					</p>
     					<p class="d-flex">
     						<span>Delivery</span>
-    						<span>$0.00</span>
+    						<span>P0.00</span>
     					</p>
     					<p class="d-flex">
     						<span>Discount</span>
-    						<span>$3.00</span>
+    						<span>P3.00</span>
     					</p>
     					<hr>
     					<p class="d-flex total-price">
     						<span>Total</span>
-    						<span>$17.60</span>
+    						<span>P23.60</span>
     					</p>
     				</div>
     				<p class="text-center"><a href="checkout.html" class="btn btn-primary py-3 px-4">Proceed to Checkout</a></p>
