--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
+		                    <p class="name">Jeff Kawabata</p>
 		                    <span class="position">Marketing Manager</span>
 		                  </div>
 	                  </div>
@@ -459,7 +459,7 @@
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
+		                    <p class="name">Atienza</p>
 		                    <span class="position">Marketing Manager</span>
 		                  </div>
 	                  </div>
@@ -474,7 +474,7 @@
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
+		                    <p class="name">Elsa</p>
 		                    <span class="position">Marketing Manager</span>
 		                  </div>
 	                  </div>
