--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@
 	          	<span class="subheading">Since 2022</span>
 	            <h2 class="mb-4">Desire to help local Farmers</h2>
 
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+	            <p>You want to help our farmers? You are very welcome here!! Buying products from our website not just help improve the daily life of our local, but also the agriculture as a whole in the Philippines. 
+			So don't think twice and pressing that add to cart and let's all help and give gratitude to our hardworking farmers.</p>
+	           
 	            <p class="year">
 	            	<strong class="number" data-number="15">0</strong>
 		            <span> and more locals are helped</span>
