--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
               		<p><span class="fa fa-calendar"></span> 23 April 2022</p>
               	</div>
                 <h3 class="heading mb-3"><a href="#">A big help for the locals</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Buying products from this website can help the local farmers for their daily living expenses. Compared to buying from the markets, all the profit gained from selling the products in this website will go to our local farmers.</p>
                 <a href="#" class="btn-custom">Continue <span class="fa fa-long-arrow-right"></span></a>
 
               </div>
@@ -523,7 +523,7 @@
               		<p><span class="fa fa-calendar"></span> 23 April 2022</p>
               	</div>
                 <h3 class="heading mb-3"><a href="#">Increase of agricultural help</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Buying products from this website can help the local farmers for their daily living expenses. Compared to buying from the markets, all the profit gained from selling the products in this website will go to our local farmers.</p>
                 <a href="#" class="btn-custom">Continue <span class="fa fa-long-arrow-right"></span></a>
 
               </div>
@@ -538,7 +538,7 @@
               		<p><span class="fa fa-calendar"></span> 23 April 2022</p>
               	</div>
                 <h3 class="heading mb-3"><a href="#">Farmers gave gratitude to people</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>So we must give the gratitude back to our farmers. Working all day long under the scorching heat of the sun just to gave us food we can eat in our table. You can express your gratitude more clearly by buying their crops directly in here.</p>
                 <a href="#" class="btn-custom">Continue <span class="fa fa-long-arrow-right"></span></a>
 
               </div>
@@ -553,7 +553,8 @@
               		<p><span class="fa fa-calendar"></span> 23 April 2020</p>
               	</div>
                 <h3 class="heading mb-3"><a href="#">Check out these new recipes</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>AYou can check here the different recipes made by our local farmers using their freshly harvested crops and vegetable. Its not just healthy, but it is also delicious - I can guarantee the taste.
+</p>
                 <a href="#" class="btn-custom">Continue <span class="fa fa-long-arrow-right"></span></a>
 
               </div>
