--- a/blog-single.html
+++ b/blog-single.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Liquor Store - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Liquor Store - By Megatron</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -128,17 +128,14 @@
               <img src="images/image_1.jpg" alt="" class="img-fluid">
             </p>
             <h2 class="mb-3">It is a long established fact a reader be distracted</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
-            <p>Molestiae cupiditate inventore animi, maxime sapiente optio, illo est nemo veritatis repellat sunt doloribus nesciunt! Minima laborum magni reiciendis qui voluptate quisquam voluptatem soluta illo eum ullam incidunt rem assumenda eveniet eaque sequi deleniti tenetur dolore amet fugit perspiciatis ipsa, odit. Nesciunt dolor minima esse vero ut ea, repudiandae suscipit!</p>
-            <h2 class="mb-3 mt-5">#2. Creative WordPress Themes</h2>
-            <p>Temporibus ad error suscipit exercitationem hic molestiae totam obcaecati rerum, eius aut, in. Exercitationem atque quidem tempora maiores ex architecto voluptatum aut officia doloremque. Error dolore voluptas, omnis molestias odio dignissimos culpa ex earum nisi consequatur quos odit quasi repellat qui officiis reiciendis incidunt hic non? Debitis commodi aut, adipisci.</p>
+            <p>Our farmers give their best for them to earn money for their everyday lives. They wait for many months to have a profit in their hardwork. With that being said, Every item counts </p>
+            <h2 class="mb-3 mt-5">#2. Work hard = Food</h2>
+            <p> They invest their whole day for cultivating vegetables. This gave them a food to their table. Buying from them helps them to buy seeds and fertilizers.</p>
             <p>
               <img src="images/image_2.jpg" alt="" class="img-fluid">
             </p>
-            <p>Quisquam esse aliquam fuga distinctio, quidem delectus veritatis reiciendis. Nihil explicabo quod, est eos ipsum. Unde aut non tenetur tempore, nisi culpa voluptate maiores officiis quis vel ab consectetur suscipit veritatis nulla quos quia aspernatur perferendis, libero sint. Error, velit, porro. Deserunt minus, quibusdam iste enim veniam, modi rem maiores.</p>
-            <p>Odit voluptatibus, eveniet vel nihil cum ullam dolores laborum, quo velit commodi rerum eum quidem pariatur! Quia fuga iste tenetur, ipsa vel nisi in dolorum consequatur, veritatis porro explicabo soluta commodi libero voluptatem similique id quidem? Blanditiis voluptates aperiam non magni. Reprehenderit nobis odit inventore, quia laboriosam harum excepturi ea.</p>
-            <p>Adipisci vero culpa, eius nobis soluta. Dolore, maxime ullam ipsam quidem, dolor distinctio similique asperiores voluptas enim, exercitationem ratione aut adipisci modi quod quibusdam iusto, voluptates beatae iure nemo itaque laborum. Consequuntur et pariatur totam fuga eligendi vero dolorum provident. Voluptatibus, veritatis. Beatae numquam nam ab voluptatibus culpa, tenetur recusandae!</p>
-            <p>Voluptas dolores dignissimos dolorum temporibus, autem aliquam ducimus at officia adipisci quasi nemo a perspiciatis provident magni laboriosam repudiandae iure iusto commodi debitis est blanditiis alias laborum sint dolore. Dolores, iure, reprehenderit. Error provident, pariatur cupiditate soluta doloremque aut ratione. Harum voluptates mollitia illo minus praesentium, rerum ipsa debitis, inventore?</p>
+            <p>They give their best to provide us healthy foods, why not give our best to provide them money from buying from their goods.</p>
+            
             <div class="tag-widget post-tag-container mb-5 mt-5">
               <div class="tagcloud">
                 <a href="#" class="tag-cloud-link">Life</a>
@@ -153,8 +150,8 @@
                 <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid mb-4">
               </div>
               <div class="desc">
-                <h3>George Washington</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
+                <h3>Andrew E.</h3>
+                <p>They love how they live their life. Support them and save their months of hardwork</p>
               </div>
             </div>
 
@@ -167,9 +164,9 @@
                     <img src="images/person_1.jpg" alt="Image placeholder">
                   </div>
                   <div class="comment-body">
-                    <h3>John Doe</h3>
+                    <h3>Pour Khied</h3>
                     <div class="meta">April 12, 2020 at 1:21am</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                    <p>Masarap yung carrots mahal nga lang, 69 isa.</p>
                     <p><a href="#" class="reply">Reply</a></p>
                   </div>
                 </li>
@@ -179,9 +176,9 @@
                     <img src="images/person_1.jpg" alt="Image placeholder">
                   </div>
                   <div class="comment-body">
-                    <h3>John Doe</h3>
+                    <h3>Señorita</h3>
                     <div class="meta">April 12, 2020 at 1:21am</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                    <p>The carrots are so masarap, pang world class. Masyadong cheap ang price. </p>
                     <p><a href="#" class="reply">Reply</a></p>
                   </div>
 
@@ -191,9 +188,9 @@
                         <img src="images/person_1.jpg" alt="Image placeholder">
                       </div>
                       <div class="comment-body">
-                        <h3>John Doe</h3>
+                        <h3>Vladimir Vladimirovich Putin</h3>
                         <div class="meta">April 12, 2020 at 1:21am</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                        <p>Блядь! Эта еда пугает. я ненавижу ненавижу оранжевый цвет, такое чувство, будто я ем Трампа </p>
                         <p><a href="#" class="reply">Reply</a></p>
                       </div>
 
@@ -204,9 +201,9 @@
                             <img src="images/person_1.jpg" alt="Image placeholder">
                           </div>
                           <div class="comment-body">
-                            <h3>John Doe</h3>
+                            <h3>Baklang nag cocomputer</h3>
                             <div class="meta">April 12, 2020 at 1:21am</div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                            <p>Holabels! May kwento akizkis, gorabels ang lola nyey sa farmers para mag-buyla meslu ng mga carrotsbells syempre kailangan ko mag-breakfastlu diba! Syempre sayla ko yung mga carrotbells pila akez ganyan oh carrotbells carrotbells pak! Pag ka getlas mes ng carrotbells eto ang nabili kes.......Mars..ang dako..ang daks ems! Mars, kasing laki ng fesang mey..oh! Mars parang ano eh....Mars nakakamatay oh oh look oh hanggang ditobels eh..Laki mars oh..oh..Mars grabe ngayon lang ako makakakain ng ganitong carrotbells.....oh diba..hello oh oh saan ka na? nandito na ako..oo, diba pwedeng gawing nyelphone oh diba..pwedeng gawing face..pwedeng iganyan-ganyan sa fesang..emsss..eme..laki SiSss ngayon lang ako makakakain ng ganito kalaking carrotbells ang daks talaga sis, kahit nung nasa qatar ako walang ganito kalaking carrotbells sis..super daks diba..sUpermarkets aRe sHaKing sIs..ang laki sis eh oh, Mars ang laki!! I can’t</p>
                             <p><a href="#" class="reply">Reply</a></p>
                           </div>
 
@@ -216,9 +213,9 @@
                                   <img src="images/person_1.jpg" alt="Image placeholder">
                                 </div>
                                 <div class="comment-body">
-                                  <h3>John Doe</h3>
+                                  <h3>anonymous</h3>
                                   <div class="meta">April 12, 2020 at 1:21am</div>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                                  <p> My crocodile hates the petchay.	</p>
                                   <p><a href="#" class="reply">Reply</a></p>
                                 </div>
                               </li>
@@ -234,9 +231,9 @@
                     <img src="images/person_1.jpg" alt="Image placeholder">
                   </div>
                   <div class="comment-body">
-                    <h3>John Doe</h3>
+                    <h3>Shizuka</h3>
                     <div class="meta">April 12, 2020 at 1:21am</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                    <p>にんじんが大好き, Kawaī!! </p>
                     <p><a href="#" class="reply">Reply</a></p>
                   </div>
                 </li>
@@ -346,7 +343,7 @@
 
             <div class="sidebar-box ftco-animate">
               <h3>Paragraph</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
+              <p></p>
             </div>
           </div>
 
