--- a/blog-single.html
+++ b/blog-single.html
@@ -295,7 +295,7 @@
               <div class="block-21 mb-4 d-flex">
                 <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
                 <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+                  <h3 class="heading"><a href="#">Save them at all cost.</a></h3>
                   <div class="meta">
                     <div><a href="#"><span class="fa fa-calendar"></span> Apr. 18, 2020</a></div>
                     <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
@@ -306,7 +306,7 @@
               <div class="block-21 mb-4 d-flex">
                 <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
                 <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+                  <h3 class="heading"><a href="#">This humans contribute a lot.</a></h3>
                   <div class="meta">
                     <div><a href="#"><span class="fa fa-calendar"></span> Apr. 18, 2020</a></div>
                     <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
@@ -317,7 +317,7 @@
               <div class="block-21 mb-4 d-flex">
                 <a class="blog-img mr-4" style="background-image: url(images/image_3.jpg);"></a>
                 <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+                  <h3 class="heading"><a href="#">Buy now save livelihood later.</a></h3>
                   <div class="meta">
                     <div><a href="#"><span class="fa fa-calendar"></span> Apr. 18, 2020</a></div>
                     <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
