--- a/blog-single.html
+++ b/blog-single.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Liquor Store - By Megatron</title>
+    <title>Organiko Lokal/title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -127,7 +127,7 @@
           	<p>
               <img src="images/image_1.jpg" alt="" class="img-fluid">
             </p>
-            <h2 class="mb-3">It is a long established fact a reader be distracted</h2>
+            <h2 class="mb-3">Dedicated farmers for you.</h2>
             <p>Our farmers give their best for them to earn money for their everyday lives. They wait for many months to have a profit in their hardwork. With that being said, Every item counts </p>
             <h2 class="mb-3 mt-5">#2. Work hard = Food</h2>
             <p> They invest their whole day for cultivating vegetables. This gave them a food to their table. Buying from them helps them to buy seeds and fertilizers.</p>
