--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     					</div>
     					<div class="text">
     						<h2>Online Support 24/7</h2>
-    						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+    						<p>We are pleased to serve you.</p>
     					</div>
     				</div>
     			</div>
@@ -142,7 +142,7 @@
     					</div>
     					<div class="text">
     						<h2>Money Back Guarantee</h2>
-    						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+    						<p>In the event that the vegetable is not fresh, we can return the money.</p>
     					</div>
     				</div>
     			</div>
@@ -153,7 +153,7 @@
     					</div>
     					<div class="text">
     						<h2>Free Shipping &amp; Return</h2>
-    						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+    						<p>Are you from Madagascar, Palau Island or even Namek? Don't worry we will ship the vegetable for you anywhere. </p>
     					</div>
     				</div>
     			</div>
@@ -411,12 +411,12 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the city Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">The vegetable are fresh. Maalden ko kayo</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Alden Richards</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <span class="position">Former Child</span>
 		                  </div>
 	                  </div>
                   </div>
@@ -426,12 +426,12 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">당근은 화살 쏘기의 모범 사례 표적입니다.</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Jumong</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <span class="position">Archer from Korea</span>
 		                  </div>
 	                  </div>
                   </div>
@@ -441,12 +441,12 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the city Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">Wow, nice carrots.</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Rocco Nacino</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <span class="position"> GMA Fan</span>
 		                  </div>
 	                  </div>
                   </div>
@@ -456,12 +456,12 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the city Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">Tunay ngang masarap ang produktong pilipino. Mabuhay ang Pilipinas!</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Antonio Luna</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <span class="position">PNP Chief General </span>
 		                  </div>
 	                  </div>
                   </div>
@@ -471,12 +471,12 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">Th-th-th-the carrots are good, I lo-lo-lo-love petchay. Di ako nag hire ng trolls</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Bong Bong Marcos</p>
-		                    <span class="position">Corrupt Manager</span>
+		                    <span class="position">Corrupt President</span>
 		                  </div>
 	                  </div>
                   </div>
