--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
     					</div>
     					<div class="text">
     						<h2>Online Support 24/7</h2>
-    						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+    						<p>We are pleased to serve you.</p>
     					</div>
     				</div>
     			</div>
@@ -140,7 +140,7 @@
     					</div>
     					<div class="text">
     						<h2>Money Back Guarantee</h2>
-    						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+    						<p>In the event that the vegetable is not fresh, we can return the money.</p>
     					</div>
     				</div>
     			</div>
@@ -151,7 +151,7 @@
     					</div>
     					<div class="text">
     						<h2>Free Shipping &amp; Return</h2>
-    						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+    						<p>Are you from Madagascar, Palau Island or even Namek? Don't worry we will ship the vegetable for you anywhere.</p>
     					</div>
     				</div>
     			</div>
@@ -169,8 +169,8 @@
 	          	<span class="subheading">Since 2022</span>
 	            <h2 class="mb-4">Desire to help local farmers</h2>
 
-	            <p>An ecommers store to help locals in the Philippines. flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+	            <p>You want to help our farmers? You are very welcome here!! Buying products from our website not just help improve the daily life of our local, but also the agriculture as a whole in the Philippines. 
+			So don't think twice and pressing that add to cart and let's all help and give gratitude to our hardworking farmers.</p>
 	            <p class="year">
 	            	<strong class="number" data-number="15">0</strong>
 		            <span>and more locals are helped</span>
@@ -243,12 +243,12 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">The vegetable is fresh. I hope I can have profit here. </p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <p class="name">Bong Bong Marcos</p>
+		                    <span class="position">Corrupt President</span>
 		                  </div>
 	                  </div>
                   </div>
@@ -258,12 +258,12 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">The vegetables are fresh. Maalden ko kayo!</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <p class="name">Alden Richards</p>
+		                    <span class="position">Former Child</span>
 		                  </div>
 	                  </div>
                   </div>
@@ -273,11 +273,11 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">나는 당근을 좋아해 화살쏘기에 최고의 인형이다</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
+		                    <p class="name">Jumong</p>
 		                    <span class="position">Marketing Manager</span>
 		                  </div>
 	                  </div>
@@ -288,12 +288,12 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">Wow, nice cabbage.</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <p class="name">Rocco Nacino</p>
+		                    <span class="position">GMA Fan</span>
 		                  </div>
 	                  </div>
                   </div>
@@ -303,12 +303,12 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">Tunay ngang masarap ang produktong pilipino. Mabuhay ang pilipinas! </p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <p class="name">Antonio Luna</p>
+		                    <span class="position">PNP Chief General</span>
 		                  </div>
 	                  </div>
                   </div>
