--- a/blog.html
+++ b/blog.html
@@ -191,7 +191,7 @@
               		<p><span class="fa fa-calendar"></span> 23 April 2020</p>
               	</div>
                 <h3 class="heading mb-3"><a href="#">A homemade ube jam</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>An ube jam is made from purple yam. It is healthy and addictive. It's has a sweet flavor and distinct flavor.</p>
                 <a href="#" class="btn-custom">Continue <span class="fa fa-long-arrow-right"></span></a>
 
               </div>
@@ -206,7 +206,7 @@
               		<p><span class="fa fa-calendar"></span> 23 April 2020</p>
               	</div>
                 <h3 class="heading mb-3"><a href="#">The best coffee in Batangas</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Tapang nito haha, batangas coffee or most commonly called kapeng barako is a strong coffee. It has a intense and bold taste. Hardcore coffee lover will love this.  </p>
                 <a href="#" class="btn-custom">Continue <span class="fa fa-long-arrow-right"></span></a>
 
               </div>
